---
title: "DEES ERD ① 회원 도메인"
---

```mermaid
erDiagram
    users {
        bigint id PK "고유 ID"
        varchar login_id UK "로그인 ID (6~20자, 영소문자+숫자)"
        varchar password "bcrypt 해시 (cost 12+)"
        varchar email UK "이메일 (필수)"
        varchar nickname "닉네임 (2~12자)"
        enum role "end_user / owner / master"
        varchar profile_icon "프로필 아이콘 코드"
        varchar area_sido "내 구역 - 시/도"
        varchar area_gugun "내 구역 - 구/군"
        varchar phone "휴대폰 (Phase 3)"
        varchar address "배송 주소 (Phase 3)"
        enum status "active/dormant/suspended/withdrawn"
        timestamp last_login_at "마지막 로그인"
        timestamp dormant_at "휴면 전환일"
        timestamp withdrawn_at "탈퇴 완료일"
        timestamp created_at "가입일"
        timestamp updated_at "수정일"
    }

    owner_profiles {
        bigint id PK "고유 ID"
        bigint user_id FK "users.id"
        varchar business_reg_number "사업자등록번호"
        varchar business_reg_image "사업자등록증 이미지 경로"
        varchar representative_name "대표자명"
        varchar bank_name "은행명 (Phase 3)"
        varchar bank_account "계좌번호 (Phase 3)"
        varchar bank_holder "예금주 (Phase 3)"
        timestamp created_at "등록일"
        timestamp updated_at "수정일"
    }

    master_profiles {
        bigint id PK "고유 ID"
        bigint user_id FK "users.id"
        enum master_type "super / general"
        jsonb permissions "권한 범위 (일반 마스터용)"
        timestamp created_at "등록일"
    }

    user_grades {
        bigint id PK "고유 ID"
        bigint user_id FK "users.id"
        int grade "현재 등급 (1~5)"
        int activity_score "활동 점수 (Phase 2)"
        decimal purchase_amount "누적 구매액 (Phase 3)"
        date grade_achieved_at "현 등급 달성일"
        int underperform_months "기준 미달 연속 개월 수"
        timestamp updated_at "갱신일"
    }

    user_grade_history {
        bigint id PK "고유 ID"
        bigint user_id FK "users.id"
        int prev_grade "이전 등급"
        int new_grade "변경 등급"
        enum change_type "promote / demote"
        varchar reason "변경 사유"
        timestamp created_at "변경일"
    }

    follows {
        bigint id PK "고유 ID"
        bigint user_id FK "users.id (팔로우 하는 사람)"
        enum target_type "store / category / user"
        bigint target_id "대상 ID (가게·카테고리·유저)"
        timestamp created_at "팔로잉일"
    }

    blocks {
        bigint id PK "고유 ID"
        bigint user_id FK "users.id (차단한 사람)"
        bigint blocked_user_id FK "users.id (차단된 사람)"
        timestamp created_at "차단일"
    }

    terms_versions {
        bigint id PK "고유 ID"
        enum terms_type "tos / privacy / third_party / marketing"
        varchar version "버전 (예: 1.0.0)"
        text content "약관 내용"
        enum consent_type "required / notice_only"
        date effective_date "시행일"
        bigint created_by FK "작성 마스터 users.id"
        timestamp created_at "등록일"
    }

    terms_consents {
        bigint id PK "고유 ID"
        bigint user_id FK "users.id"
        bigint terms_version_id FK "terms_versions.id"
        boolean consented "동의 여부"
        timestamp consented_at "동의일시"
    }

    users ||--o| owner_profiles : "점주인 경우"
    users ||--o| master_profiles : "마스터인 경우"
    users ||--o| user_grades : "등급 현황"
    users ||--o{ user_grade_history : "등급 변경 이력"
    users ||--o{ follows : "팔로잉"
    users ||--o{ blocks : "차단 (차단한)"
    users ||--o{ blocks : "차단 (차단된)"
    users ||--o{ terms_consents : "약관 동의"
    terms_versions ||--o{ terms_consents : "버전별 동의"
```